<resources>
    <string name="app_name">Massage Share App</string>
    <string name="show_toast">Show Toast</string>
    <string name="enter_your_massage">Enter your massage</string>
    <string name="send_data_to_next_activity">Send Data To Next Activity</string>
    <string name="share_to_other_apps">Share To Other Apps</string>
    <string name="recycler_view_demo">Recycler View Demo</string>
    <string name="button_clicked">Longer Duration</string>
</resources>