<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:gravity="center_horizontal"
        android:text="@string/show_toast" />

    <EditText
        android:id="@+id/editUserMassage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShowToast"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/enter_your_massage"
        android:textColorHighlight="#EC1212"
        android:textColorHint="#B1A8A8"
        android:textColorLink="#EC1212" />

    <Button
        android:id="@+id/btnSendThisToNextActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editUserMassage"
        android:layout_marginTop="46dp"
        android:gravity="center_horizontal"
        android:text="@string/send_data_to_next_activity" />

    <Button
        android:id="@+id/shareToOtherApps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSendThisToNextActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/share_to_other_apps" />

    <Button
        android:id="@+id/recyclerViewDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareToOtherApps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/recycler_view_demo" />
</RelativeLayout>